--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@sendgrid/mail": "^7.7.0",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
+    "bootstrap-select": "^1.13.18",
     "connect-flash": "^0.1.1",
     "ejs": "^3.1.6",
     "env-cmd": "^10.1.0",
