--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "multer": "^1.4.4",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
-    "socket.io": "^4.5.0"
+    "socket.io": "^4.5.0",
+    "stripe": "^9.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
