--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
-    "dev": "env-cmd -f ./config_2/dev.env nodemon app.js"
+    "dev": "env-cmd -f ./config_2/dev.env nodemon server.js"
   },
   "keywords": [],
   "author": "",
